gcp/cloudtuple/2-service/0-main/gke/clust-w1/apps/1-php/php.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: php-deploy
  labels:
    app: php-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: php-app
  template:
    metadata:
      labels:
        app: php-app
    spec:
      volumes:
      - name: google-cloud-key
        secret:
          secretName: php-key
      - name: pod-info
        downwardAPI:
          items:
            - path: "name"
              fieldRef:
                fieldPath: metadata.name
            - path: "namespace"
              fieldRef:
                fieldPath: metadata.namespace
            - path: "uid"
              fieldRef:
                fieldPath: metadata.uid
            - path: "labels"
              fieldRef:
                fieldPath: metadata.labels
            - path: "annotations"
              fieldRef:
                fieldPath: metadata.annotations
      containers:
      - image: gcr.io/gke-service-project-1b/php:v17
        name: php-container
        ports:
        - containerPort: 8080
          protocol: TCP
        volumeMounts:
        - name: google-cloud-key
          mountPath: /var/secrets/google
        - name: pod-info
          mountPath: /etc/podinfo
          readOnly: false
      dnsPolicy: ClusterFirst
---
apiVersion: v1
kind: Service
metadata:
  name: php-ilb
  annotations:
    cloud.google.com/load-balancer-type: "Internal"
  labels:
    app: php-app
spec:
  type: LoadBalancer
  loadBalancerIP: 10.0.4.99
  ports:
  - nodePort: 30011
    port: 80
    targetPort: 8080
    protocol: TCP
  selector:
    app: php-app
---
apiVersion: v1
kind: Service
metadata:
  name: php-nodeport
  labels:
    app: php-app
spec:
  ports:
  - nodePort: 30099
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: php-app
  type: NodePort
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: php-ingress
  labels:
    app: php-app
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "gke-php-ingress-ip"
spec:
  backend:
    serviceName: php-nodeport
    servicePort: 80
---
